Dependency on non-POSIX header file <link.h> causes portability problem

XMLWordPrintable

    • 2d
    • b36
    • x86
    • linux

        FULL PRODUCT VERSION :


        ADDITIONAL OS VERSION INFORMATION :
        Linux 3.0, IBM AIX 7.1

        A DESCRIPTION OF THE PROBLEM :
        link.h is included in following source files from OpenJDK codebase

        src/solaris/npt/npt_md.h
        src/solaris/native/sun/awt/fontpath.c
        src/solaris/native/sun/java2d/opengl/OGLFuncs_md.h
        src/solaris/native/sun/java2d/x11/XRBackendNative.c
        src/solaris/native/sun/security/pkcs11/j2secmod_md.c
        src/solaris/native/sun/security/pkcs11/wrapper/p11_md.c
        src/solaris/native/sun/security/jgss/wrapper/NativeFunc.c
        src/solaris/native/sun/security/smartcardio/pcsc_md.c
        src/solaris/native/sun/nio/fs/GnomeFileTypeDetector.c

        But link.h is not part of POSIX standard, see http://en.wikipedia.org/wiki/C_POSIX_library, moreover this including causes portability problem for other Unix-like platforms, such as AIX. So far as I see, OpenJDK only uses POSIX.1-2001 compatible dlopen, dlclose, dlsym, dlerror functions, no special extensions involved, so here suggest to remove link.h and use dlfcn.h only.



        REPRODUCIBILITY :
        This bug can be reproduced always.

              Assignee:
              Philip Race
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: