7152519: Dependency on non-POSIX header file <link.h> causes portability problem

Reviewed-by: prr, igor